less/forum/extension.less
.Badge--bestAnswer {
  background-color: #58a400;
}

.Post-footer{
  .item-bestAnswerPost {
    padding: 10px;
    background-color: rgba(88, 164, 0, 0.23);
    margin-top: 35px;
    border-radius: 4px;

    .Post-body {
      color: #111;
    }

    .PostUser-badges, .PostUser-avatar {
      display: none;
    }

    .Post--BestAnswer {
      margin-right: 0;

      a .icon {
        display: inline-block;
      }
    }
  }
}

.Post--BestAnswer {
  background: #58a400;
  float: right;
  border: 0 none !important;
  border-radius: 4px;
  padding: 2px 5px;

  &, a {
    color: white;
  }

  .icon {
    margin-right: 5px;
  }

  .BestAnswer--User {
    margin-left: 7.5px;
    text-align: right;
    font-size: .9em;
  }
}

